# Practical-Python-Code-Adventure

./: .dockerignore  .env.EXAMPLE  .gitignore  Dockerfile  Dockerfile-api  README.md  css_bundler.py  docker-compose.override.EXAMPLE.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.py  update_from_2025.py
app/: __init__.py  appctx.py  cache.py  config.py  extensions.py  models.py  run.py  types.py  ui.py
app/auth/: decorators.py
app/blueprints/: __init__.py  admin.py  api.py  auth.py  challenge.py  errors.py  main.py  routes.py
app/services/: __init__.py  cooldown.py  discord.py  progress.py
app/static/: robots.txt
app/static/js/: cooldown.js  replay.js
app/static/puzzle_input/2025/08/: input1.txt
app/static/puzzle_input/2026/01/: input1help.txt  input2help.txt
app/static/style/: _base.css  _forms_buttons.css  _layout.css  _variables.css  main.css
app/static/style/admin/: admin_style.css  iframe_style.css  variables.css
app/static/style/components/: _navbar.css  _sponsor.css
app/static/style/year_overrides/: style2025.css  style2026.css
app/templates/: challenge.html  challenge_default.html  champions.html  default.html  gratitude.html  how_to.html  index.html  link_complete.html  login.html  logout.html  sponsor.html
app/templates/2025/: index_content.html
app/templates/2026/: index_content.html
app/templates/admin/: default.html  discord.html  home.html  html.html  iframe.html  perms.html  release.html  solutions.html  sponsors.html  users.html
app/templating/: __init__.py  globals.py
website/: setup.py
(+10 files in other folders)
